// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component sample test 1`] = `
<a
  className="normal"
  href="https://facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Facebook
</a>
`;

exports[`Link component sample test 2`] = `
<a
  className="hovered"
  href="https://facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Facebook
</a>
`;

exports[`Link component sample test 3`] = `
<a
  className="normal"
  href="https://facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Facebook
</a>
`;
